# modelers

./: Cargo.toml
src/: camera.rs  context.rs  global.rs  lib.rs  loop_clock.rs  main.rs  render_config.rs  shapes.rs
src/global/: camera.rs  light.rs
src/shapes/: base_line.rs  cube.rs
src/shapes/base_line/: base_line.wgsl  polygon.rs
src/shapes/cube/: cube.wgsl  polygon.rs
