[package]
name = "modelers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.11.0"
winit = "0.25"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
cgmath = "0.18"
fps_counter = "2.0"
png = "0.16"
