[package]
name = "modelers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
winit = "0.26"
futures = "0.3"
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
cgmath = "0.18"
fps_counter = "2.0"
png = "0.17"

log = "0.4"
env_logger = "0.9"
